syntax = "proto3";
package tutorial;

import "google/protobuf/timestamp.proto";

option go_package = "clerk/generated/ad";

message ad {
  uint32 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  google.protobuf.Timestamp deleted_at = 4;
  string city = 5;
  google.protobuf.Timestamp date = 6;
  int32 stars = 7;
  string title = 8;
  string address = 9;
  double footage = 10;
  int32 rooms = 11;
  int32 floor = 12;
  int32 building_floors = 13;
  string specifications = 14;
  int32 price = 15;
  bool premium = 16;
  string ad_id = 17;
  uint32 ad_id_ui = 18;
  string source = 19;
  string url = 20;
}
